--- a/main.css
+++ b/main.css
@@ -65,6 +65,12 @@ body{
 .box-container2:active{
     background-color:rgb(70, 70, 70);
 }
+.search-bottom-area{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    margin-top:10px;
+}
 .send-btn{
     position:absolute;
     top:85px;
@@ -79,4 +85,24 @@ body{
 }
 .send-btn:active{
     background-color:rgb(70, 70, 70);
+}
+.copilot-tasks{
+    margin-top:10px;
+    display:flex;
+    flex:1;
+    justify-content: center;
+    gap:10px;
+}
+.task-item{
+    color:white;
+    justify-content:center;
+    font-size:14px;
+    font-family:Arial;
+    background-color:rgb(36, 35, 40);
+    border:1px solid rgb(78, 78, 78);
+    border-radius:5px;
+    padding:10px;
+    white-space:nowrap;
+    text-align:center;
+    cursor:pointer;
 }
